load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace: lab-app
spec:
  containers:
    - name: load-generator
      image: busybox
      command: ["/bin/sh", "-c", "while true; do wget -q -O- http://hello-app-svc; done"]
  restartPolicy: Never
