service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
  namespace: lab-app
spec:
  type: ClusterIP


  selector:
    app: hello-app

  ports:
    - port: 80
      targetPort: 80
