networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-app-netpol
  namespace: lab-app
spec:
  podSelector:
    matchLabels:
      app: hello-app          
  policyTypes:
    - Ingress                 
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx    
        - podSelector:
            matchLabels:
              app: hello-app                                 
      ports:
        - protocol: TCP
          port: 80
